# rag-movie-plots

./: .env.template  .gitignore  README.md  pyproject.toml
docs/architecture/: chuncking_text_segmentation_architecture.excalidraw  etl_data_cleaning_jsonl_architecture.excalidraw  generation_architecture.excalidraw  rag_architecture.excalidraw  retrieval_architecture.excalidraw  vectorstore_embedding_architecture.excalidraw
notebooks/: 1.0-ilfn-initial-data-exploration.ipynb  1.1.ilfn-chunking_strategy_exploration.ipynb  2.0-ilfn-chunking_strategy_exploration.ipynb  2.0-ilfn-cleaning-and-preprocessing.ipynb  2.0-ilfn-rag-ingestion-pipeline.ipynb  3.0-ilfn-rag-ingestion-pipeline.ipynb  3.0-ilfn-rag-online-query.ipynb  4.0-ilfn-rag-online-query.ipynb  notebook_setup.py
src/backend/: config.py  main.py
src/backend/chat/: chat_rag.py
src/backend/chunking/: chunking_pipeline.py
src/backend/chunking/chunk_strategy/: __init__.py  character_splitter.py  recursive_splitter.py  token_splitter.py
src/backend/config/: settings.py
src/backend/embedding/: embedding_pipeline.py
src/backend/etl/: data_cleaner.py  data_pipeline.py  jsonl_writer.py
src/backend/infra/: llm_client.py
src/backend/pipeline/: rag_ingestion_pipeline.py
src/backend/pipelines/chunking/: chunking_pipeline.py
src/backend/pipelines/etl/: data_cleaner.py  data_pipeline.py  (+1 more)
src/backend/retriever/: retriever.py
src/backend/utils/: log_filters.py  logger.py  time_utils.py
src/backend/vectorstore/: vectorstore_pipeline.py
src/tests/backend/: chat_rag_tester.py  retriever_tester.py
(+9 files in other folders)
